--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.7.0
+  connectivity_plus: ^4.0.2
   cupertino_icons: ^1.0.2
   firebase_auth: null
   firebase_core: ^2.12.0
